increase the length of the User fields to fit with the new scenario

--- a/view/home.xhtml
+++ b/view/home.xhtml
@@ -30,7 +30,7 @@
 				</div>
 				<div class="errors"><h:messages id="messages" globalOnly="true"/></div>
 				<div class="buttonBox"><h:commandButton id="login" action="#{identity.quietLogin}" value="Account Login"/></div>
-				<div class="notes"><s:link id="register" view="/register.xhtml" value="Register New User"/></div>
+				<div class="notes"><s:link id="register" name="register" view="/register.xhtml" value="Register New User"/></div>
                 <div class="subnotes">
                     Or use a demo account:
                     <ul>
