--- a/view/register.xhtml
+++ b/view/register.xhtml
@@ -79,9 +79,9 @@
 					</s:decorate>
 					
 					<div class="buttonBox">
-						<h:commandButton id="register" value="Register" action="#{register.register}"/>
+						<h:commandButton id="register" name="register" value="Register" action="#{register.register}"/>
 						&#160;
-						<s:button id="cancel" value="Cancel" view="/home.xhtml"/>
+						<s:button id="cancel" name="cancel" value="Cancel" view="/home.xhtml"/>
 					</div>
 									
 				</fieldset>
